--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <base href="http://localhost:8888">
     <% } %>
   <body>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/ui/style.css">
     <h1>Number of closed TCV valves</h1>
     <p id="valves">Loading...</p>
     <button id="changeMap">Change map</button>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/ui/main.ts"></script>
   </body>
 </html>
