--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <body>
     <link rel="stylesheet" href="/ui/style.css">
-    <h1>Randomly close TCV valves</h1>
+    <h1>Close TCV valves</h1>
     <p id="valves">Loading...</p>
-    <button id="changeMap">Close 10 valves</button>
+    <button id="close-valves">Close 10 valves</button>
     <script type="module" src="/ui/main.ts"></script>
   </body>
 </html>
