[APP-11717] Update sample for changes in plugin 0.0.27

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <body>
-    <link rel="stylesheet" href="/ui/style.css">
+    <link rel="stylesheet" href="style.css">
     <h1>Close TCV valves</h1>
     <p id="valves">Loading...</p>
     <button id="close-valves">Close 10 valves</button>
-    <script type="module" src="/ui/main.ts"></script>
+    <script type="module" src="main.ts"></script>
   </body>
 </html>
