--- a/src/panel/index.html
+++ b/src/panel/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <body>
-    <link rel="stylesheet" href="style.css">
-    <h1>Close TCV valves</h1>
+
+<body>
+  <link rel="stylesheet" href="style.css">
+  <section>
+    <h2>Close TCV valves</h2>
     <p id="valves">Loading...</p>
-    <button id="close-valves">Close 10 valves</button>
-    <script type="module" src="main.ts"></script>
-  </body>
+  </section>
+  <button id="close-valves">Close 10 valves</button>
+  <script type="module" src="main.ts"></script>
+</body>
+
 </html>
